--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h1,h2, h3, h4, h5, h6 {
 }
  
 .container {
-	padding:0 20px 0 20px;
+	padding:0 0px 0 0px;
 	position:relative;
 }
 
@@ -244,7 +244,7 @@ header ul.nav li ul li a {
 
 .navbar .nav a:hover {
 	background:none;
-	color: #14A085 !important;
+	color: #0a5ba0 !important;
 }
 
 .navbar .nav > .active > a,.navbar .nav > .active > a:hover {
@@ -284,7 +284,7 @@ header ul.nav li ul li ul {
   content:none;
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-color: #14A085;
+color: #0a5ba0;
 }
 
 
@@ -565,13 +565,13 @@ section.callaction {
 ==================================== */
 
 #inner-headline{
-	background: #14A085;
+	background: #0a5ba0;
 	position:relative;
 	margin:0;
 	padding:0;
 	color:#fefefe;
 	/* margin: 15px; */
-	border-top: 10px solid #11967C;
+	border-top: 10px solid #0a5ba0;
 }
 
 
@@ -789,7 +789,7 @@ form#commentform textarea {
 	height: 91%;
 	opacity: 0.50;
 	filter: alpha(opacity=80);
-	background: #14A085;
+	background: #0a5ba0;
 }
 
 .item-thumbs .hover-wrap .overlay-img-thumb {
@@ -825,7 +825,7 @@ margin-right: 15px;
 ul.portfolio-categ li a{
 	display:block;
 	padding: 8px 20px;
-	color: #14A085;
+	color: #0a5ba0;
 }
 ul.portfolio-categ li.active{
 border: 1px solid #D7D8D6;
@@ -994,7 +994,7 @@ ul.link-list li{
 	list-style:none;
 }
 footer{
-background: #14A085;
+background: #0a5ba0;
 }
 footer ul.link-list li a{
 	color: #FFFFFF;
@@ -1238,7 +1238,7 @@ background: #F9F9F9;
 .pricing-box-item .pricing-terms  h6 {
 	font-style:italic;
 	margin-top:10px;
-	color: #14A085;
+	color: #0a5ba0;
 	font-size: 22px;
 	font-family:'Noto Serif', serif;
 }
@@ -1349,7 +1349,7 @@ ul.social-network li {
 	padding:0;
 	padding-top:30px;
 	margin:20px 0 0 0;
-	background: #14A085;
+	background: #0a5ba0;
 }
 
 #sub-footer p{
